force-app/main/default/objects/POE_ClientProduct__c/POE_ClientProduct__c.object-meta.xml
<CustomObject>
    <label>Client Product</label>
    <nameField>
        <label>Client Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>