force-app/main/default/objects/POE_ClientProduct__c/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <label>Program</label>
    <length>25</length>
    <type>Text</type>
</CustomField>